--- a/fly.toml
+++ b/fly.toml
@@ -1,34 +1,23 @@
-app = "nijhuis-activity-manager"
-primary_region = "ams"
+# fly.toml app configuration file generated for nijhuistaakmanagement on 2025-06-10T13:24:35Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'nijhuistaakmanagement'
+primary_region = 'ams'
 
 [build]
-
-[env]
-  NODE_ENV = "production"
-  PORT = "8080"
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
-[[http_service.checks]]
-  interval = "15s"
-  grace_period = "5s"
-  method = "GET"
-  path = "/api/health"
-  protocol = "http"
-  timeout = "10s"
-  tls_skip_verify = false
-
-[machines]
-  cpu_kind = "shared"
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 512
-
-[[statics]]
-  guest_path = "/app/dist"
-  url_prefix = "/"
+  memory_mb = 1024
